# Gospel

./: CMakeLists.txt  README.md
Gospel.Builder/: CMakeLists.txt  Controller.hpp  Launcher.cpp  Session.hpp  Source.hpp  Task.hpp
Gospel.Builder/Models/: Document.hpp
Gospel.Compiler/: CMakeLists.txt  GenerateCOFF.cpp  GenerateCOFF.hpp  Launcher.cpp
Gospel.Language/: CMakeLists.txt  Gospel.Laungage.hpp  Grammar.cpp  Grammar.hpp  Implementable.hpp  Plugin.hpp  Pointer.hpp
Gospel.Language/Lexical/: Identifier.hpp  Immediate.hpp  Keyword.hpp  Token.hpp
Gospel.Language/Semantic/: Element.hpp  Instruction.hpp  Intention.hpp  Method.hpp  Module.cpp  Module.hpp  Namespace.cpp  Namespace.hpp  Type.hpp  Visbility.hpp
Gospel.Language/Semantic/CompoundTypes/: ArrayType.hpp  EnumType.hpp  PointerType.hpp
Gospel.Language/Syntax/: Expression.cpp  Expression.hpp
